--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ddai-web-sso",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "start:dev": "vite",
@@ -10,9 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dedo_ai/gui-com-lib": "2.0.1",
+    "@en1-gma/use-form": "1.0.5",
+    "@tanstack/react-query": "5.44.0",
+    "@tanstack/react-query-devtools": "5.44.0",
+    "i18next": "23.11.5",
+    "i18next-browser-languagedetector": "8.0.0",
+    "i18next-chained-backend": "4.6.2",
+    "i18next-http-backend": "2.5.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "@dedo_ai/gui-com-lib": "2.0.1"
+    "react-i18next": "13.5.0",
+    "swiper": "8.4.7",
+    "vite-tsconfig-paths": "5.0.1",
+    "yup": "1.4.0"
   },
   "devDependencies": {
     "@types/node": "20.14.2",
@@ -30,6 +41,8 @@
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "8.0.0",
+    "postcss": "8.1.0",
+    "tailwindcss": "3.4.4",
     "typescript": "5.4.5",
     "vite": "5.4.1"
   }
