--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
+    "postinstall": "cp -R node_modules/@dedo_ai/gui-com-lib/dist/assets/icons/loader.svg public/assets/",
     "start:dev": "vite --mode development",
     "start:prod": "vite --mode production",
     "build:dev": "tsc -b && vite build --mode development",
@@ -14,7 +15,7 @@
     "deploy:prod": "git tag prod-$npm_package_version && git push origin prod-$npm_package_version"
   },
   "dependencies": {
-    "@dedo_ai/gui-com-lib": "2.0.36",
+    "@dedo_ai/gui-com-lib": "2.0.42",
     "@en1-gma/use-form": "1.0.5",
     "@tanstack/react-query-devtools": "5.44.0",
     "@tanstack/react-query": "5.44.0",
