--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.1",
   "type": "module",
   "scripts": {
-    "postinstall": "cp -R node_modules/@dedo_ai/gui-com-lib/dist/assets/icons/loader.svg public/assets/",
+    "postinstall": "cp -R node_modules/@dedo_ai/gui-com-lib/dist/assets/icons/loader.svg public/assets/icons/",
     "start:dev": "vite --mode development",
     "start:prod": "vite --mode production",
     "build:dev": "tsc -b && vite build --mode development",
