--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,4 @@
 VITE_API_BASE_URL=https://api.dev.dedoai.org
 VITE_TRUSTED_DOMAINS=http://localhost:3000,https://platform.dev.dedoai.org
+VITE_RECAPTCHA_KEY=6LfKWDUqAAAAAFcqDXem5gyOc1lq7sdfBGpSP7SA
+VITE_ENV=DEV
