--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
 VITE_API_BASE_URL=https://api.dev.dedoai.org
 VITE_ENV=DEV
 VITE_FB_APP_ID=1257905168923893
+VITE_GOOGLE_CLIENT_ID=996707628773-1pjct2705dga27f1m1cfbqbn806gd9rr.apps.googleusercontent.com
 VITE_RECAPTCHA_KEY=6LfKWDUqAAAAAFcqDXem5gyOc1lq7sdfBGpSP7SA
 VITE_TRUSTED_DOMAINS=http://localhost:3000,https://platform.dev.dedoai.org
