--- a/package.json
+++ b/package.json
@@ -16,35 +16,36 @@
   "dependencies": {
     "@dedo_ai/gui-com-lib": "2.0.57",
     "@en1-gma/use-form": "1.0.5",
-    "@tanstack/react-query-devtools": "5.44.0",
+    "@react-oauth/google": "0.12.1",
     "@tanstack/react-query": "5.44.0",
+    "@tanstack/react-query-devtools": "5.44.0",
     "axios": "1.7.7",
+    "i18next": "23.11.5",
     "i18next-browser-languagedetector": "8.0.0",
     "i18next-chained-backend": "4.6.2",
     "i18next-http-backend": "2.5.2",
-    "i18next": "23.11.5",
+    "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "13.5.0",
-    "react": "18.3.1",
     "vite-tsconfig-paths": "5.0.1",
     "yup": "1.4.0"
   },
   "devDependencies": {
     "@types/node": "20.14.2",
-    "@types/react-dom": "18.3.0",
     "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
     "@vitejs/plugin-react": "4.3.1",
+    "eslint": "8.25.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-no-relative-import-paths": "1.4.0",
-    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react": "7.31.10",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "8.0.0",
-    "eslint": "8.25.0",
     "postcss": "8.1.0",
     "tailwindcss": "3.4.4",
     "typescript": "5.4.5",
