--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next-browser-languagedetector": "8.0.0",
     "i18next-chained-backend": "4.6.2",
     "i18next-http-backend": "2.5.2",
+    "lodash": "4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "13.5.0",
@@ -31,6 +32,7 @@
     "yup": "1.4.0"
   },
   "devDependencies": {
+    "@types/lodash": "4.17.7",
     "@types/node": "20.14.2",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
