add: DP-142 , Init Apple SSO

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 VITE_API_BASE_URL=https://api.dedoai.org
+VITE_APPLE_CLIENT_ID=TODO
 VITE_FB_APP_ID=1257905168923893
 VITE_GOOGLE_CLIENT_ID=996707628773-1pjct2705dga27f1m1cfbqbn806gd9rr.apps.googleusercontent.com
 VITE_TRUSTED_DOMAINS=https://platform.dedoai.org
