--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "i18next-http-backend": "2.5.2",
     "lodash": "4.17.21",
     "react": "18.3.1",
+    "react-apple-signin-auth": "1.1.0",
     "react-dom": "18.3.1",
     "react-i18next": "13.5.0",
     "vite-tsconfig-paths": "5.0.1",
