--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 VITE_API_BASE_URL=https://api.dev.dedoai.org
+VITE_APP_URI=https://platform.dev.dedoai.org
 VITE_APPLE_CLIENT_ID=TODO
 VITE_ENV=DEV
 VITE_FB_APP_ID=1257905168923893
